# waybar-sysinfo

./: Cargo.toml  LICENSE  README.md  default.nix  flake.nix  shell.nix
src/: config.rs  lib.rs  measure.rs  modules.rs  widget.rs
src/modules/: cpu.rs  mem.rs  net.rs  temp.rs
