[package]
name = "waybar-sysinfo"
description = "Plugin for waybar that displays system info as vertical bars"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
humansize = "2.1.3"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde-inline-default = "0.2.3"
smol = "2.0.2"
sysinfo = "0.33.1"
thiserror = "2.0.12"
waybar-cffi = "0.1.0"
